functioning getMemebrById route on local, and swagger update
